# HyperScratch

./: .gitignore  README.md  converter.py  poly_marsproject.json  project.h  project.json  requirements.txt  test
Parser/: Blocks.py  Costume.py  ScratchParser.py  Sprite.py  Stage.py
engine/: CMakeCache.txt  CMakeLists.txt  HyperScratch  Makefile  cmake_install.cmake
engine/include/: blocks.h  control.h  costume.h  looks.h  main.h  motion.h  project.h  render.h  sensing.h  sprite.h  stage.h  texture.h
engine/src/: main.cpp  main_unix.cpp  render.cpp
engine/src/blocks/: control.cpp  looks.cpp  motion.cpp  sensing.cpp
